# crewmap

./: readme.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx
frontend/src/api/: roadmap.ts
frontend/src/components/: JobForm.tsx  RoadmapHistory.tsx  RoadmapLoader.tsx  RoadmapResult.tsx  RoadmapSection.tsx  TextType.tsx
frontend/src/pages/: Home.tsx
frontend/src/utils/: roadmapDownloader.ts  roadmapStorage.ts  splitRoadmap.ts
roadmap/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
roadmap/knowledge/: user_preference.txt
roadmap/src/roadmap/: api.py  crew.py  main.py
roadmap/src/roadmap/cache/: job_cache.py  redis_client.py  roadmap_cache.py
roadmap/src/roadmap/config/: agents.yaml  tasks.yaml
roadmap/src/roadmap/models/: job.py
roadmap/src/roadmap/services/: job_fetcher.py
roadmap/src/roadmap/utils/: linkedin.py
