[project]
name = "roadmap"
version = "0.1.0"
description = "roadmap using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2"
]

[project.scripts]
roadmap = "roadmap.main:run"
run_crew = "roadmap.main:run"
train = "roadmap.main:train"
replay = "roadmap.main:replay"
test = "roadmap.main:test"
run_with_trigger = "roadmap.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
